--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,13 @@
     "vite": "4.4.9"
   },
   "dependencies": {
-    "@walletconnect/modal-sign-html": "^2.6.1",
     "@algorandfoundation/algokit-utils": "^4.1.0",
     "@blockshake/defly-connect": "^1.1.6",
+    "@chakra-ui/react": "^2.8.1",
     "@daffiwallet/connect": "^1.0.3",
     "@perawallet/connect": "^1.3.1",
     "@txnlab/use-wallet": "^2.1.1",
+    "@walletconnect/modal-sign-html": "^2.6.1",
     "algosdk": "^2.5.0",
     "daisyui": "^3.1.0",
     "notistack": "^3.0.1",
