--- a/relay/package.json
+++ b/relay/package.json
@@ -18,8 +18,10 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "algosdk": "^2.7.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "ethers": "^6.8.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.0",
     "web3": "^4.0.3"
